Adicionada uma propriedade para realizar um mapeamento "raso"
Evitando assim StackOverflowError